force-app/main/default/objects/Fee_Summary__c/Fee_Summary__c.object-meta.xml
<CustomObject>
    <label>Fee Summary</label>
    <nameField>
        <displayFormat>FSUM-{00000}</displayFormat>
        <label>Fee Summary ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>