force-app/main/default/objects/Fee_Summary__c/fields/Assessment_Fees__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Fees__c</fullName>
    <description>Roll-up Summary Total of all Fees where Fee Type = Assessment Fee</description>
    <label>Assessment Fees</label>
    <summarizedField>Fee__c.Fee__c</summarizedField>
    <summaryFilterItems>
        <field>Fee__c.Fee_Type__c</field>
        <operation>equals</operation>
        <value>Assessment Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>Fee__c.Fee_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>