force-app/main/default/objects/Fee_Summary__c/fields/Fees_Paid_Manual__c.field-meta.xml
<CustomField>
    <fullName>Fees_Paid_Manual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fees Paid - Manual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>