force-app/main/default/objects/Fee_Summary__c/fields/Fees_Paid_Online__c.field-meta.xml
<CustomField>
    <fullName>Fees_Paid_Online__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fees Paid - Online</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>