force-app/main/default/objects/Fee_Summary__c/fields/Original_Fee_Summary__c.field-meta.xml
<CustomField>
    <fullName>Original_Fee_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Fee Summary</label>
    <referenceTo>Fee_Summary__c</referenceTo>
    <relationshipLabel>Fee Summaries</relationshipLabel>
    <relationshipName>Fee_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>