force-app/main/default/objects/Fee_Summary__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration</label>
    <referenceTo>License_Registration__c</referenceTo>
    <relationshipLabel>Fee Summaries</relationshipLabel>
    <relationshipName>Fee_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>