force-app/main/default/objects/Fee_Summary__c/fields/Registration_Total__c.field-meta.xml
<CustomField>
    <fullName>Registration_Total__c</fullName>
    <description>Formula: Assessment Fees + Exam Fees + Registration Fees.</description>
    <formula>Assessment_Fees__c +  Exam_Fees__c +  Registration_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount for all Assessment, Exam and Registration fees combined.</inlineHelpText>
    <label>Registration Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>